--- a/src/main/webapp/pages/registro/detalle_proyecto.xhtml
+++ b/src/main/webapp/pages/registro/detalle_proyecto.xhtml
@@ -1,133 +1,162 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:j="http://java.sun.com/jsp/jstl/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:j="http://java.sun.com/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui">
 
 <h:body>
 
-	<ui:composition template="/templates/layout.xhtml">
-		<ui:define name="content">
-			<h2>Proyecto:</h2>
-			<p:messages autoUpdate="true" closable="true" showDetail="false" />
-			<h:panelGrid columns="2" width="100%">
+    <ui:composition template="/templates/layout.xhtml">
+        <ui:define name="content">
+            <h2>Proyecto:</h2>
+            <p:messages autoUpdate="true" closable="true" showDetail="false"/>
+            <h:panelGrid columns="2" width="100%">
 
-				<h:outputLabel value="Nombre Proyecto:" for="nombre" />
-				<h:outputLabel id="nombre"
-					value="#{proyectoBean.proyectoDTO.nombre}" />
+                <h:outputLabel value="Nombre Proyecto:" for="nombre"/>
+                <h:outputLabel id="nombre"
+                               value="#{proyectoBean.proyectoDTO.nombre}"/>
 
-				<h:outputLabel value="Fecha Creacion:" for="fechaCreacionProyecto" />
-				<p:calendar id="fechaCreacionProyecto" readonlyInput="true"
-					label="Fecha Nacimiento" required="true" navigator="true"
-					pattern="dd/MM/yyyy" yearRange="1900:c"
-					value="#{proyectoBean.proyectoDTO.fechaCreacion}" />
-				<p:message for="fechaCreacionProyecto" />
+                <h:outputLabel value="Fecha Creacion:"
+                               for="fechaCreacionProyecto"/>
+                <p:calendar id="fechaCreacionProyecto" readonlyInput="true"
+                            label="Fecha Nacimiento" required="true"
+                            navigator="true"
+                            pattern="dd/MM/yyyy" yearRange="1900:c"
+                            value="#{proyectoBean.proyectoDTO.fechaCreacion}"/>
+                <p:message for="fechaCreacionProyecto"/>
 
-				<h:outputLabel value="Estrategia:" for="estrategiaProyecto" />
-				<p:inputTextarea id="estrategiaProyecto"
-					value="#{proyectoBean.proyectoDTO.estrategia}" required="true"
-					disabled="disabled" />
+                <h:outputLabel value="Estrategia:" for="estrategiaProyecto"/>
+                <p:inputTextarea id="estrategiaProyecto"
+                                 value="#{proyectoBean.proyectoDTO.estrategia}"
+                                 required="true"
+                                 disabled="disabled"/>
 
-				<h:outputLabel value="Lider de automatizaci&oacute;n *" for="lider" />
-				<p:selectOneMenu id="lider" disabled="disabled" value="1"
-					style="width:125px">
-					<f:selectItem itemLabel="Seleccionar" itemValue="" />
-					<f:selectItem itemLabel="Carlos Gomez" itemValue="1" />
-					<f:selectItem itemLabel="Javier Hernandez" itemValue="2" />
-					<f:selectItem itemLabel="Ramiro Fernandez" itemValue="3" />
-				</p:selectOneMenu>
+                <h:outputLabel value="Lider de automatizaci&oacute;n *"
+                               for="lider"/>
+                <p:selectOneMenu id="lider" disabled="disabled" value="1"
+                                 style="width:125px">
+                    <f:selectItem itemLabel="Seleccionar" itemValue=""/>
+                    <f:selectItem itemLabel="Carlos Gomez" itemValue="1"/>
+                    <f:selectItem itemLabel="Javier Hernandez" itemValue="2"/>
+                    <f:selectItem itemLabel="Ramiro Fernandez" itemValue="3"/>
+                </p:selectOneMenu>
 
 
-			</h:panelGrid>
+            </h:panelGrid>
 
-			<h:link value="Editar" outcome="/pages/registro/registro.xhtml">
-				<f:param name="id" value="#{proyectoBean.proyectoDTO.id}" />
-			</h:link>
-			<p:separator></p:separator>
+            <h:link value="Editar" outcome="/pages/registro/registro.xhtml">
+                <f:param name="id" value="#{proyectoBean.proyectoDTO.id}"/>
+            </h:link>
+            <p:separator></p:separator>
 
-			<h5>Funcionalidad</h5>
+            <h5>Funcionalidad</h5>
 
-			<p:commandButton value="Agregar funcionalidad" type="button" onclick="PF('funcionalidadDlg').show();" />
-			<p:commandButton id="btnGuardarFunc" value="Guardar funcionalidades" type="button" onclick="PF('guardarFuncionalidadDlg').show();"/>
+            <p:commandButton value="Agregar funcionalidad" type="button"
+                             onclick="PF('funcionalidadDlg').show();"/>
+            <p:commandButton id="btnGuardarFunc" value="Guardar funcionalidades"
+                             type="button"
+                             onclick="PF('guardarFuncionalidadDlg').show();"/>
 
-			<p:dialog id="dialogConfirmacion" header="Guardar funcionalidades" widgetVar="guardarFuncionalidadDlg" modal="true" styleClass="dialog dialog2"
-					  draggable="false" resizable="false" showEffect="fade"
-					  hideEffect="fade">
-				<h:form>
-				<h:panelGrid columns="4" width="100%">
-					<h:outputLabel value="¿Est&aacute; seguro de guardar las funcionalidades?"/>
-					<h:inputHidden id="id" value="#{proyectoBean.proyectoDTO.id}" />
-				</h:panelGrid>
-				<button type="button" class="btn btn-default" onclick="PF('guardarFuncionalidadDlg').hide();">
-					Cancelar</button>
+            <p:dialog id="dialogConfirmacion" header="Guardar funcionalidades"
+                      widgetVar="guardarFuncionalidadDlg" modal="true"
+                      styleClass="dialog dialog2"
+                      draggable="false" resizable="false" showEffect="fade"
+                      hideEffect="fade">
+                <h:form>
+                    <h:panelGrid columns="4" width="100%">
+                        <h:outputLabel
+                                value="¿Est&aacute; seguro de guardar las funcionalidades?"/>
+                        <h:inputHidden id="id"
+                                       value="#{proyectoBean.proyectoDTO.id}"/>
+                    </h:panelGrid>
+                    <button type="button" class="btn btn-default"
+                            onclick="PF('guardarFuncionalidadDlg').hide();">
+                        Cancelar
+                    </button>
 
-				<p:commandButton value="Aceptar"
-								 oncomplete="PF('guardarFuncionalidadDlg').hide();"
-								 actionListener="#{proyectoBean.guardarFuncionalidades}"
-								 icon="ui-icon-check" styleClass="btn btn-primary"/>
-				</h:form>
-			</p:dialog>
-			<h:form>
-			<p:panel id="panelListaFuncionalidades">
-				<p:dataTable id="tableFuncionalidades" value="#{proyectoBean.funcionalidadesDTO}" var="funcionalidad">
-					<p:column headerText="Funcionalidad">
-						<h:link value="#{funcionalidad.nombreFuncionalidad}" outcome="/pages/funcionalidad/template_funcionalidad.xhtml">
-							<f:param name="id" value="#{funcionalidad.id}" />
-							<f:param name="detalle" value="true"/>
-						</h:link>
-					</p:column>
-					<p:column headerText="N&uuml;mero de CP">
-						<h:outputText value="prueba" />
-					</p:column>
-					<p:column headerText="Ver">
-						<p:commandButton 
-							icon="ui-icon-search" value="Ver" />
-						<p:commandButton actionListener="#{proyectoBean.quitarFuncionalidad(funcionalidad.nombreFuncionalidad)}"
-							 value="Quitar" update="tableFuncionalidades"/>
-							
-					</p:column>
+                    <p:commandButton value="Aceptar"
+                                     oncomplete="PF('guardarFuncionalidadDlg').hide();"
+                                     actionListener="#{proyectoBean.guardarFuncionalidades}"
+                                     icon="ui-icon-check"
+                                     styleClass="btn btn-primary"/>
 
-				</p:dataTable>
-			</p:panel>	
-			<p:separator />
+                </h:form>
+            </p:dialog>
+            <h:form>
+                <p:panel id="panelListaFuncionalidades">
+                    <p:dataTable id="tableFuncionalidades"
+                                 value="#{proyectoBean.funcionalidadesDTO}"
+                                 var="funcionalidad">
+                        <p:column headerText="Funcionalidad">
+                            <h:link styleClass="btn btn-link" value="#{funcionalidad.nombreFuncionalidad}"
+                                    outcome="/pages/funcionalidad/template_funcionalidad.xhtml">
+                                <f:param name="id" value="#{funcionalidad.id}"/>
+                                <f:param name="detalle" value="true"/>
+                                <f:param name="idProyecto" value="#{proyectoBean.proyectoDTO.id}"/>
+                                <f:param name="nombreProyecto" value="#{proyectoBean.proyectoDTO.nombre}"/>
+                            </h:link>
+                        </p:column>
+                        <p:column headerText="N&uuml;mero de CP">
+                            <h:outputText value="prueba"/>
+                        </p:column>
+                        <p:column headerText="Ver">
+                            <p:commandButton
+                                    icon="ui-icon-search" value="Ver"/>
+                            <p:commandButton
+                                    actionListener="#{proyectoBean.quitarFuncionalidad(funcionalidad.nombreFuncionalidad)}"
+                                    value="Quitar"
+                                    update="tableFuncionalidades"/>
 
-			 <p:dialog id="dialogFuncionalidad" header="Funcionalidad" widgetVar="funcionalidadDlg" modal="true" styleClass="dialog dialog2"
-                draggable="false" resizable="false" showEffect="fade"
-                hideEffect="fade">
-            <h:panelGrid columns="4" width="100%">
-									<h:outputLabel value="Nombre de la funcionalidad *"
-										for="nombreFuncionalidad" />
-									<p:inputText id="nombreFuncionalidad" value="#{proyectoBean.funcionalidadDTO.nombreFuncionalidad}"
-										required="true" />
+                        </p:column>
 
-									<h:outputLabel value="Complejidad *" for="complejidadSelect" />
-									<p:selectOneMenu id="complejidadSelect" 
-									                 value="#{proyectoBean.funcionalidadDTO.complejidad}" 
-									                 style="width:125px"
-										             converter="#{complejidadConverter}">
-										<f:selectItem/>
-										<f:selectItems
-											value="#{proyectoBean.listaCatalogoComplejidad}"
-											var="complejidad"
-											itemLabel="#{complejidad.descripcionComplejidad}"
-											itemValue="#{complejidad}" />
-									</p:selectOneMenu>
-								</h:panelGrid>
-							<button type="button" class="btn btn-default" onclick="PF('funcionalidadDlg').hide();">
-							Cancelar</button>
+                    </p:dataTable>
+                </p:panel>
+                <p:separator/>
 
-							<p:commandButton value="Agregar"
-								update="dialogFuncionalidad,panelListaFuncionalidades"
-								oncomplete="PF('funcionalidadDlg').hide();"
-								actionListener="#{proyectoBean.generarListaFuncionalidades}"
-								icon="ui-icon-check" styleClass="btn btn-primary"/>
-        </p:dialog>
-			</h:form>
-		</ui:define>
-	</ui:composition>
+                <p:dialog id="dialogFuncionalidad" header="Funcionalidad"
+                          widgetVar="funcionalidadDlg" modal="true"
+                          styleClass="dialog dialog2"
+                          draggable="false" resizable="false" showEffect="fade"
+                          hideEffect="fade">
+                    <h:panelGrid columns="4" width="100%">
+                        <h:outputLabel value="Nombre de la funcionalidad *"
+                                       for="nombreFuncionalidad"/>
+                        <p:inputText id="nombreFuncionalidad"
+                                     value="#{proyectoBean.funcionalidadDTO.nombreFuncionalidad}"
+                                     required="true"/>
+
+                        <h:outputLabel value="Complejidad *"
+                                       for="complejidadSelect"/>
+                        <p:selectOneMenu id="complejidadSelect"
+                                         value="#{proyectoBean.funcionalidadDTO.complejidad}"
+                                         style="width:125px"
+                                         converter="#{complejidadConverter}">
+                            <f:selectItem/>
+                            <f:selectItems
+                                    value="#{proyectoBean.listaCatalogoComplejidad}"
+                                    var="complejidad"
+                                    itemLabel="#{complejidad.descripcionComplejidad}"
+                                    itemValue="#{complejidad}"/>
+                        </p:selectOneMenu>
+                    </h:panelGrid>
+                    <button type="button" class="btn btn-default"
+                            onclick="PF('funcionalidadDlg').hide();">
+                        Cancelar
+                    </button>
+
+                    <p:commandButton value="Agregar"
+                                     update="dialogFuncionalidad,panelListaFuncionalidades"
+                                     oncomplete="PF('funcionalidadDlg').hide();"
+                                     actionListener="#{proyectoBean.generarListaFuncionalidades}"
+                                     icon="ui-icon-check"
+                                     styleClass="btn btn-primary"/>
+                </p:dialog>
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </h:body>
 </html>
