--- a/src/main/webapp/pages/registro/lista.xhtml
+++ b/src/main/webapp/pages/registro/lista.xhtml
@@ -11,14 +11,14 @@
 	<ui:composition template="/templates/layout.xhtml">
 		<ui:define name="content">
 			<h2>Proyectos</h2>
-			<h:link value="Nuevo" outcome="/pages/registro/registro.xhtml" />
+			<h:link styleClass="btn btn-primary" value="Nuevo" outcome="/pages/registro/registro.xhtml" />
 			<p:dataTable value="#{proyectosBean.proyectos}" rows="5"
 				style="text-align:center;" var="proyecto" paginator="true"
 				paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} 
                          					{PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 				rowsPerPageTemplate="5,10,15">
 				<p:column headerText="Nombre Proyecto">
-					<h:link value="#{proyecto.nombre}" outcome="/pages/registro/detalle_proyecto.xhtml">
+					<h:link styleClass="btn btn-link" value="#{proyecto.nombre}" outcome="/pages/registro/detalle_proyecto.xhtml">
 						<f:param name="id" value="#{proyecto.id}" />
 						<f:param name="detalle" value="true"/>
 					</h:link>
